# nanomiddleclick

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: qa.yml  release.yml
launchd/: co.myrt.nanomiddleclickd.plist
nanomiddleclick/: Cargo.toml
nanomiddleclick-app-monitor/: Cargo.toml  build.rs
nanomiddleclick-app-monitor/shim/: nanomiddleclick_app_monitor.h  workspace_monitor.m
nanomiddleclick-app-monitor/src/: lib.rs  raw.rs
nanomiddleclick-core/: Cargo.toml
nanomiddleclick-core/src/: config.rs  gesture_fsm.rs  lib.rs
nanomiddleclick-daemon/: Cargo.toml
nanomiddleclick-daemon/src/: app.rs  logging.rs  main.rs
nanomiddleclick-input/: Cargo.toml  build.rs
nanomiddleclick-input/shim/: input_runtime.c  nanomiddleclick_input.h
nanomiddleclick-input/src/: lib.rs  raw.rs
nanomiddleclick-launchd/: Cargo.toml
nanomiddleclick-launchd/src/: lib.rs
nanomiddleclick-platform/: Cargo.toml  build.rs
nanomiddleclick-platform/shim/: MultitouchSupport.h  config_store.c  input_runtime.c  nanomiddleclick_shim.h  nanomiddleclick_shim.m  workspace_monitor.m
nanomiddleclick-platform/src/: lib.rs  raw.rs
nanomiddleclick-preferences/: Cargo.toml  build.rs
nanomiddleclick-preferences/shim/: nanomiddleclick_preferences.h  preferences.c
nanomiddleclick-preferences/src/: lib.rs  raw.rs
nanomiddleclick/src/: app.rs  launchd.rs  logging.rs  main.rs  settings.rs
shim/: MultitouchSupport.h
src/: config.rs  ffi.rs  gesture_fsm.rs  main.rs
