[package]
name = "nanomiddleclick"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nanomiddleclick"
path = "src/main.rs"

[dependencies]
nanomiddleclick-core = { path = "../nanomiddleclick-core" }
nanomiddleclick-launchd = { path = "../nanomiddleclick-launchd" }
nanomiddleclick-platform = { path = "../nanomiddleclick-platform" }

[lints]
workspace = true
