[package]
name = "nanomiddleclick"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "nanomiddleclick"
path = "src/main.rs"

[dependencies]
nanomiddleclick-core = { path = "../nanomiddleclick-core" }
nanomiddleclick-launchd = { path = "../nanomiddleclick-launchd" }
nanomiddleclick-platform = { path = "../nanomiddleclick-platform" }

[lints]
workspace = true
