[package]
name = "nanomiddleclick"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "nanomiddleclick"
path = "src/main.rs"

[dependencies]
nanomiddleclick-core = { path = "../nanomiddleclick-core" }
nanomiddleclick-launchd = { path = "../nanomiddleclick-launchd" }
nanomiddleclick-platform = { path = "../nanomiddleclick-platform" }

[lints]
workspace = true
